精简依赖, 将具体平台的打包和运行转移至对应平台的模块